--- a/Starter_Code/part_1_mars_news.ipynb
+++ b/Starter_Code/part_1_mars_news.ipynb
@@ -176,7 +176,7 @@
    ],
    "source": [
     "# Print the list to confirm success\n",
-    "print(articles_list) # nothing is printing, find out\n"
+    "print(articles_list) # nothing is printing, find out, maybe for loop needed\n"
    ]
   },
   {
