--- a/Starter_Code/part_1_mars_news.ipynb
+++ b/Starter_Code/part_1_mars_news.ipynb
@@ -169,57 +169,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'title_element' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m preview \u001b[39m=\u001b[39m article\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m'\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39marticle_teaser_body\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mget_text()\n\u001b[0;32m     17\u001b[0m \u001b[39m# Check for None before proceeding\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[39mif\u001b[39;00m title_element \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m preview_element \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     title \u001b[39m=\u001b[39m title_element\u001b[39m.\u001b[39mget_text()\n\u001b[0;32m     20\u001b[0m     preview \u001b[39m=\u001b[39m preview_element\u001b[39m.\u001b[39mget_text()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'title_element' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# working on this one\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Loop through the text elements\n",
-    "articles = soup.find_all('div', class_='col-md-12')\n",
-    "\n",
-    "\n",
-    "# placeholder code\n",
-    "for article in articles:\n",
-    "    #  extracting title\n",
-    "    title = article.find('div', class_='content_title').get_text()\n",
-    "    \n",
-    "    # extracting preview text\n",
-    "    preview = article.find('div', class_='article_teaser_body').get_text()\n",
-    "    \n",
-    "    # Check for None before proceeding\n",
-    "    if title_element is not None and preview_element is not None:\n",
-    "        title = title_element.get_text()\n",
-    "        preview = preview_element.get_text()\n",
-    "    \n",
-    "        print(\"Title:\", title)\n",
-    "        print(\"Preview:\", preview)\n",
-    "    \n",
-    "    # storing in a dictionary and adding to the list\n",
-    "    titles_previews_list.append({'title': title, 'preview': preview})\n",
-    "\n",
-    "\n",
-    "# Extract the title and preview text from the elements\n",
-    "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
@@ -233,7 +182,7 @@
     "    title = article.find('div', class_='content_title')\n",
     "    preview = article.find('div', class_='article_teaser_body')\n",
     "    \n",
-    "    # Check for None before proceeding\n",
+    "    # Check for None, or else it doesn't execute\n",
     "    if title is not None and preview is not None:\n",
     "        title = title.get_text()\n",
     "        preview = preview.get_text()\n",
